# Bot_for_tutors

./: .env  .gitignore  launcher.py  loader.py  pyproject.toml  requirements.txt
api/: constants.py  registration.py
commands/: task.py
config/: conf.py
config/logging_conf/: __init__.py  handlers.py  loggers.py
entities/: hometasks.py  users.py
faked_data/: users_data.py
formatters/: users.py
handlers/: __init__.py  available_commands.py  registration.py
handlers/hometask/: __init__.py  create_hometask.py
handlers/sent_api/: registration.py
keyboards/: buttons.py  callback_data.py  inline_keyboards.py  reply_keyboards.py
messages/: registration.py  users_list.py
states/: hometask.py
