[tool.poetry]
name = "bot_for_tutors"
version = "1.2.2"
description = "A bot for tutors and their students"
authors = ["Alexander Smolin <smolll123@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.23.1"
requests = "2.28.1"
pydantic = "1.10.2"
python-dotenv = "0.21.0"
faker = "^16.6.0"
mypy = "^1.3.0"
aiogram-calendar = "^0.1.1"

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401', # module imported but unused
]
max-line-length = 120
count = true

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort] # only applying changes if they don't introduce syntax errors
atomic = true
skip_gitignore = true
profile = 'black'

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "aiogram.*"
ignore_missing_imports = true
